--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "text_me_keras"
 version = "0.1.0"
-description = "A TenosorFlow callback that texts you back (to let you know how training is going)."
+description = "A TenosorFlow callback that texts back... (to let you know how training is going)."
 authors = ["Daniel Varoli <daniel.varoli@gmail.com>"]
 
 [tool.poetry.dependencies]
